Password recovery handlers

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -20,6 +20,7 @@
                     <input type="hidden" name="next" value="{{ next }}" />
                     <input class="btn btn-primary mt-2" type="submit" value="Log-in">
                 </form>
+                 <p class="mt-2"><a  href="{% url 'password_reset' %}">Forgotten your password?</a></p>
              </div>
          </div>
     </div>
