--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -43,6 +43,16 @@
         </div>
       </nav>
       <div class="container-xxl">
+
+        {% if messages %}
+          {% for message in messages %}
+            <div class="mt-2 alert alert-{% if message.tags == 'error'%}danger{%else%}{{message.tags}}{%endif%} alert-dismissible fade show" role="alert">
+              <strong>{{ message.tags|upper }}</strong> {{ message|safe }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+
         {% block content %} {% endblock %}
       </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
