--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container mt-2">
          <div class="row">
-             <div class="col-md-6 offset-md-3">
+             <div class="col-8">
                 <h1>Log-in</h1>
                 {% if form.errors %}
                     <p>Your username and password didn't match.Please try again.</p>
@@ -21,6 +21,13 @@
                     <input class="btn btn-primary mt-2" type="submit" value="Log-in">
                 </form>
                  <p class="mt-2"><a  href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+             </div>
+             <div class="col-4">
+                 <div class="row m-5">
+                         <div class="d-grid gap-2 mx-auto p-1">
+                            <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-outline-danger">Login with Google</a>
+                         </div>
+                 </div>
              </div>
          </div>
     </div>
