--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -5,8 +5,19 @@
 {% block content %}
     <h1>Dashboard</h1>
     <hr>
+    {% with total_images_created=request.user.images_created.count %}
+        <p>
+            Welcome to your dashboard. You have bookmarked
+            {{total_images_created }} image{{ total_images_created|pluralize }}.
+        </p>
+    {% endwith %}
     <p>
-        Welcome to your dashboard.
+        Drag the following button to your bookmarks toolbar to bookmark images
+        from other websites ->
+        <a href="javascript:{% include 'bookmarklet_launcher.js' %}" class="button btn btn-primary">Bookmark it</a>
+
+    </p>
+    <p>
         You can <a href="{% url 'edit' %}">edit your profile</a> or
         <a href="{% url 'password_change' %}">change your password</a>
     </p>
