--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -2,6 +2,8 @@
 
 {% load thumbnail %}
 
+{% load static %}
+
 {% block title %}{{ image.title }}{% endblock %}
 
 {% block content %}
@@ -17,30 +19,38 @@
                  {% endthumbnail %}
              </div>
              <div class="col-6">
-                 {% with total_likes=image.user_like.count %}
-                    <h3>
-                        <span class="badge bg-primary rounded-pill">{{ total_likes }} like{{ total_likes|pluralize }}</span>
-                    </h3>
-                    <p>{{ image.description|linebreaks }}</p>
-
+                 {% with total_likes=image.user_like.count users_like=image.user_like.all %}
+                        
+                        <a id='like' href="#"  data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like">
+                            <h3>
+                                <div>
+                                    <svg id='icon' xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" style="color:{% if request.user in users_like %}red{% endif %}">
+                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                                    </svg>
+                                    <span id="total"  >{{ total_likes }} </span>like{{ total_likes|pluralize }}
+                                </div>
+                                
+                            </h3>
+                        </a>
+                        <p>{{ image.description|linebreaks }}</p>
+                    
 
                     <div class="image-likes">
                         {% for user in image.user_like.all %}
-                            <div>
-                                <img src="{{ user.profile.avatar.url }}" class="img-fluid rounded" style="width:50px;">
-                                <p>{{ user.first_name }}</p>
-                            </div>
+                
+                        <div class="col-md-1">
+                            <img src="{{ user.profile.avatar.url }}" class="img-fluid rounded" style="width:30px;">
+                            <p>{{ user.first_name }}</p>
+                        </div>
+                       
+                            
                         {% empty %}
                             Nobody likes this image yet.
                         {% endfor %}
                     </div>
                 {% endwith %}
              </div>
-
-
-
-
-
          </div>
 </div>
+<script src="{% static 'js/like.js'%}" ></script>
 {% endblock %}
