--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -21,10 +21,10 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if request.user.is_authenticated %}
                 <li class="nav-item ">
-                  <a class="nav-link {% if section == 'dashboard' %}active{% endif %}" aria-current="page" href="#">My dashboard</a>
+                  <a class="nav-link {% if section == 'dashboard' %}active{% endif %}" aria-current="page" href="{% url 'dashboard' %}">My dashboard</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link {% if section == 'images' %}active{% endif %}" href="#">Images</a>
+                  <a class="nav-link {% if section == 'images' %}active{% endif %}" href="{% url 'list' %}">Images</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link {% if section == 'people' %}active{% endif %}" href="#">People</a>
