profile list image

--- a/images/templates/images/image/list_ajax.html
+++ b/images/templates/images/image/list_ajax.html
@@ -5,8 +5,8 @@
         <div class="card  m-3" >
             <a href="{{ image.get_absolute_url }}">
                 {% thumbnail image.image "300x300" crop="100%" as im %}
-                    <img src="{{ im.url }}" class="card-img-top" alt="...">
-                {% endthumbnail %} 
+                    <img src="{{ im.url }}" class="card-img-top mx-auto" alt="...">
+                {% endthumbnail %}
             </a>
             <div class="card-body">
                 <a href="{{ image.get_absolute_url }}">
