--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -27,7 +27,7 @@
                   <a class="nav-link {% if section == 'images' %}active{% endif %}" href="{% url 'list' %}">Images</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link {% if section == 'people' %}active{% endif %}" href="#">People</a>
+                  <a class="nav-link {% if section == 'people' %}active{% endif %}" href="{% url 'user_list' %}">People</a>
                 </li>
               {% endif %}
             </ul>
