--- a/account/templates/account/user/detail.html
+++ b/account/templates/account/user/detail.html
@@ -2,6 +2,8 @@
 
 {% load thumbnail %}
 
+{% load static %}
+
 {% block title %}{{ user.get_full_name }}{% endblock %}
 
 {% block content %}
@@ -20,21 +22,22 @@
              <div class="col-9">
                 {% with total_followers=user.followers.count %}
                 <span class="count btn btn-outline-primary m-3 " style="background:blue;color:white;">
-                    <span class="total">{{ total_followers }}</span>
+                    <span id="total">{{ total_followers }}</span>
                         follower{{ total_followers|pluralize }}
                 </span>
-                <span  data-id="{{ user.id }}"
+
+                <span id="follow"  data-id="{{ user.id }}"
                 data-action="{% if request.user in user.followers.all %}un{% endif %}follow"
-                class="follow button btn btn-outline-danger float-right m-3"
+                class=" button btn btn-outline-danger float-right m-3"
                 style="{% if request.user in user.followers.all %}background:red;color:white;{% endif %}float: right;"
                 align="right">
                 {% if request.user not in user.followers.all %}
-                Follow
+                    Follow
                 {% else %}
-                Unfollow
+                    Unfollow
                 {% endif %}
                 </span>
-
+                
                 <div id="image-list" class="row row-cols-1 row-cols-md-4 g-4 m-2">
                     {% include "images/image/list_ajax.html" with images=user.images_created.all %}
                 </div>
@@ -44,5 +47,5 @@
 
  </div>
 
-
+<script src="{% static 'js/follow.js' %}"></script>
 {% endblock %}
