--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -21,4 +21,12 @@
         You can <a href="{% url 'edit' %}">edit your profile</a> or
         <a href="{% url 'password_change' %}">change your password</a>
     </p>
+    <hr>
+    <h2>What's happening</h2>
+    <hr>
+    <div id="action-list">
+        {% for action in actions %}
+            {% include "actions/action/detail.html" %}
+        {% endfor %}
+    </div>
 {% endblock %}
