--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -18,7 +18,7 @@
                     </a>
                  {% endthumbnail %}
              </div>
-             <div class="col-6">
+             <div class="col-3">
                  {% with total_likes=image.user_like.count users_like=image.user_like.all %}
                         
                         <a id='like' href="#"  data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like">
@@ -33,7 +33,7 @@
                             </h3>
                         </a>
                         <p>{{ image.description|linebreaks }}</p>
-                    
+
 
                     <div class="image-likes">
                         {% for user in image.user_like.all %}
@@ -49,6 +49,12 @@
                         {% endfor %}
                     </div>
                 {% endwith %}
+             </div>
+             <div class="col-3">
+                 <span class="count btn btn-outline-secondary " >
+                    <span >{{ total_views }}</span>
+                        view{{ total_views|pluralize }}
+                </span>
              </div>
          </div>
 </div>
