--- a/account/templates/account/user/list.html
+++ b/account/templates/account/user/list.html
@@ -12,9 +12,7 @@
              <div class="col">
                 <div class="card">
                     <a href="{{ user.get_absolute_url }}">
-                        {% thumbnail user.profile.avatar "180x180" crop="100%" as im %}
-                         <img src="{{ im.url }}" class="card-img-top" alt="...">
-                        {% endthumbnail %}
+                        <img  src="{{ user.profile.avatar.url }}" class="card-img-top rounded" alt="...">
                     </a>
                   <div class="card-body">
                       <a href="{{ user.get_absolute_url }}">
