--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -20,7 +20,10 @@
                     <input type="hidden" name="next" value="{{ next }}" />
                     <input class="btn btn-primary mt-2" type="submit" value="Log-in">
                 </form>
-                 <p class="mt-2"><a  href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+                 <p class="mt-2">
+                     <a  href="{% url 'password_reset' %}">Forgotten your password?</a><br>
+                     <a href="{% url 'register'%}">Register</a>
+                 </p>
              </div>
              <div class="col-4">
                  <div class="row m-5">
